--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ ext {
 dependencies {
     compile group: 'org.springframework', name: 'spring-webmvc', version:"${springVersion}"
     compile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
-    compile group: 'javax.servlet', name: 'jstl', version:'1.2'
-    compile group: 'mysql-connector-java', name: 'mysql', version: '5.1.46'
+    compile group: 'javax.servlet', name: 'jstl', version:'1.2'// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.45'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.springframework', name: 'spring-test', version:"${springVersion}"
 }
