--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.45'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.springframework', name: 'spring-test', version:"${springVersion}"
+    compile group: 'org.hibernate', name: 'hibernate-validator', version:'5.2.1.Final'
 }
 
 eclipse {
